# machine-learning-engineer

./: .dockerignore  404.html  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-docs.yml
README-DOCS/: index.html
api/endpoints/: index.html
api/examples/: index.html
api/models/: index.html
architecture/architecture-comparison/: index.html
architecture/components/: index.html
architecture/ml-pipeline/: index.html
architecture/overview/: index.html
config/: .env_exemplo  config.yaml
data/input/: voos.json
dev/contributing/: index.html
dev/environment/: index.html
dev/troubleshooting/: index.html
diagrams/: aws-architecture.drawio
docker/: api.Dockerfile  requirements.txt
docker/compose/: index.html
docker/deployment/: index.html
docker/setup/: index.html
docs/: README-DOCS.md  index.md
docs/api/: endpoints.md  examples.md  models.md
docs/architecture/: architecture-comparison.md  components.md  ml-pipeline.md  overview.md
docs/dev/: contributing.md  environment.md  troubleshooting.md
docs/docker/: compose.md  deployment.md  setup.md
docs/ml/: data-analysis.md  evaluation.md  model-training.md  preprocessing.md
notebook/: Model.ipynb  Profiling.ipynb  Transform.ipynb  perguntas.ipynb
search/: search_index.json
tests/: __init__.py  conftest.py  run_tests.py  test_airports_database.py  test_extract_airportdb_api.py  test_extract_airports_database.py  test_integration.py  test_ml_pipeline.py  test_routers.py  test_services.py  test_utils.py
(+36 files in other folders)
